--- a/TapasTop/app/src/main/res/navigation/nav_graph.xml
+++ b/TapasTop/app/src/main/res/navigation/nav_graph.xml
@@ -13,12 +13,11 @@
             app:destination="@id/mainMenuFragment"
             app:enterAnim="@anim/enter_anim"
             app:popUpTo="@id/initialFragment"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_initialFragment_to_postSignUpFragment"
-            app:destination="@id/postSignUpFragment"
-            app:popUpTo="@id/initialFragment"
             app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_initialFragment_to_verifyMailFragment"
+            app:destination="@id/verifyMailFragment"
+            app:enterAnim="@android:anim/slide_in_left" />
     </fragment>
     <fragment
         android:id="@+id/mainMenuFragment"
@@ -57,5 +56,15 @@
             app:destination="@id/mainMenuFragment"
             app:popUpTo="@id/nav_graph"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/verifyMailFragment"
+        android:name="es.upm.isii.tapastop.VerifyMailFragment"
+        android:label="VerifyMailFragment" >
+        <action
+            android:id="@+id/action_verifyMailFragment_to_postSignUpFragment"
+            app:destination="@id/postSignUpFragment"
+            app:popUpTo="@id/initialFragment"
+            app:popUpToInclusive="false" />
     </fragment>
 </navigation>
