--- a/TapasTop/app/src/main/res/values/colors.xml
+++ b/TapasTop/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="blue_700">#2962ff</color>
     <color name="blue_400">#42a5f5</color>
     <color name="indigo_900">#1a237e</color>
+    <color name="grey_400">#bdbdbd</color>
     <color name="grey_900">#263238</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
